[project]
name = "mirror-py"
version = "1.0.0-pre3"
description = "Mirror manager daemon that maintains local mirrors of remote package repositories via rsync, ftpsync, and other sync protocols."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bandersnatch==6.8.0",
    "click==8.3.1",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-docker>=3",
]

[tool.pytest.ini_options]
markers = [
    "integration: end-to-end tests that require Docker (deselected by default)",
    "unit: fast in-process unit tests (default selection)",
    "dependency: test ordering dependency (used by pytest-dependency if installed)",
]
addopts = "-m 'not integration'"

[project.scripts]
mirror = "mirror.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mirror*"]
