[project]
name = "mirror.py"
version = "1.0.0rc7"
description = "Mirror manager daemon that maintains local mirrors of remote package repositories via rsync, ftpsync, and other sync protocols."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Roul", email = "roul@ftp.kaist.ac.kr" },
    { name = "SPARCS@KAIST", email = "ftp@ftp.kaist.ac.kr" },
]
keywords = ["mirror", "rsync", "ftpsync", "debian", "daemon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Mirroring",
    "Topic :: System :: Software Distribution",
]
dependencies = [
    "bandersnatch==6.8.0",
    "click==8.3.1",
    "prompt-toolkit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/sparcs-kaist/mirror.py"
Repository = "https://github.com/sparcs-kaist/mirror.py"
Issues = "https://github.com/sparcs-kaist/mirror.py/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-docker>=3",
]

[tool.pytest.ini_options]
markers = [
    "integration: end-to-end tests that require Docker (deselected by default)",
    "unit: fast in-process unit tests (default selection)",
    "dependency: test ordering dependency (used by pytest-dependency if installed)",
]
addopts = "-m 'not integration'"

[project.scripts]
mirror = "mirror.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mirror*"]
